Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <!-- Sección Jumbotron -->
 <div class="container">
   <div class="row">
-    <div class="jumbotron" style="position: relative; background-image: url('C:/Users/use/Downloads/web-basica-bootstrap/zingueria_foto1.jpg'); background-size: cover; height: 400px; color: rgb(255, 252, 252);">
+    <div class="jumbotron" style="position: relative; background-image: url('zingueria_foto1.jpg'); background-size: cover; height: 400px; color: rgb(255, 252, 252);">
       <!-- Capa oscura superpuesta -->
       <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(1, 1, 1, 0);"></div>
       
@@ -98,7 +98,7 @@
   </div>
 </div><!-- Fin Sección Jumbotron -->
 <!-- Fin Sección Jumbotron -->
-  
+
 
  <!-- Section artículo -->
 <div class="container">
