Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link href="css/nav.css" rel="stylesheet">
 <link href="css/contactos.css" rel="stylesheet">
 <link href="css/wsp.css" rel="stylesheet">
+<link href="css/section.css" rel="stylesheet">
 <link rel="stylesheet" href="path/to/your/styles.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -108,14 +109,16 @@
   
 
  <!-- Section artículo -->
-<div class="container">
-  <h2 style="color: #000000;">Zinguería a Medida</h2>
+<div class="container" >
+  <h2 style="color: #000000;text-align: center;">Zinguería a Medida</h2>
   <div class="row article-container">
       <!-- Primer artículo -->
       <div class="col-xs-6 col-sm-6 col-md-3 article">
           <img src="zingueria_foto1.jpg" alt="Imagen 1">
           <h3>Título del Artículo 1</h3>
-          <p>Descripción breve del artículo.</p>
+          <p>Descripción breve del artículo.
+         
+          </p>
           <a href="#" class="btn btn-primary">Saber más</a>
       </div>
 
@@ -175,7 +178,7 @@
           <a href="#" class="btn btn-primary">Saber más</a>
       </div>
   </div>
-
+ 
 
 
 
