Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <!-- Octavo artículo -->
       <div class="col-xs-6 col-sm-6 col-md-3 article">
         <img src="capuchones.jpg" alt="Imagen 8">
-        <h3>Caños</h3>
+        <h3>Caños2</h3>
         <p>Descripción del Artículo 8. Puedes agregar información adicional sobre el artículo aquí.</p>
         <a href="#" class="btn btn-primary">Saber más</a>
       </div>
