Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
   
 
  <!-- Section artículo -->
-  <div class="container">
-    <h2 style="color: #000000;text-align: center;">Zinguería a Medida</h2>
+  <div class="container" id="section1">
+    <h2 style="color: #000000;">Zinguería a Medida</h2>
     <div class="row article-container">
       <!-- Primer artículo -->
-      <div class="col-xs-6 col-sm-6 col-md-3 article">
+      <div class="col-xs-8 col-sm-6 col-md-3 article">
         <img src="zingueria_foto1.jpg" alt="Imagen 1">
         <h3>Título del Artículo 1</h3>
         <p>Descripción del Artículo 1. Puedes agregar información adicional sobre el artículo aquí.</p>
@@ -121,7 +121,7 @@
       </div>
 
       <!-- Segundo artículo -->
-      <div class="col-xs-6 col-sm-6 col-md-3 article">
+      <div class="col-xs-8 col-sm-6 col-md-3 article">
         <img src="curva1.jpg" alt="Imagen 2">
         <h3>Curvas</h3>
         <p>Descripción del Artículo 2. Puedes agregar información adicional sobre el artículo aquí.</p>
@@ -129,7 +129,7 @@
       </div>
 
       <!-- Tercer artículo -->
-      <div class="col-xs-6 col-sm-6 col-md-3 article">
+      <div class="col-xs-8 col-sm-6 col-md-3 article">
         <img src="babetas.jpg" alt="Imagen 3">
         <h3>Babetas</h3>
         <p>Descripción del Artículo 3. Puedes agregar información adicional sobre el artículo aquí.</p>
@@ -137,7 +137,7 @@
       </div>
 
       <!-- Cuarto artículo -->
-      <div class="col-xs-6 col-sm-6 col-md-3 article">
+      <div class="col-xs-8 col-sm-6 col-md-3 article">
         <img src="capuchon2.jpg" alt="Imagen 4">
         <h3>Capuchones</h3>
         <p>Descripción del Artículo 4. Puedes agregar información adicional sobre el artículo aquí.</p>
@@ -145,7 +145,7 @@
       </div>
 
       <!-- Quinto artículo -->
-      <div class="col-xs-6 col-sm-6 col-md-3 article">
+      <div class="col-xs-8 col-sm-6 col-md-3 article">
         <img src="conversa.jpg" alt="Imagen 5">
         <h3>Conversa</h3>
         <p>Descripción del Artículo 5. Puedes agregar información adicional sobre el artículo aquí.</p>
@@ -153,7 +153,7 @@
       </div>
 
       <!-- Sexto artículo -->
-      <div class="col-xs-6 col-sm-6 col-md-3 article">
+      <div class="col-xs-8 col-sm-6 col-md-3 article">
         <img src="sombrero.jpg" alt="Imagen 6">
         <h3>Sombrero spiro</h3>
         <p>Descripción del Artículo 6. Puedes agregar información adicional sobre el artículo aquí.</p>
@@ -161,7 +161,7 @@
       </div>
 
       <!-- Séptimo artículo -->
-      <div class="col-xs-6 col-sm-6 col-md-3 article">
+      <div class="col-xs-8 col-sm-6 col-md-3 article">
         <img src="cañosrectangulo.jpg" alt="Imagen 7">
         <h3>Caños</h3>
         <p>Descripción del Artículo 7. Puedes agregar información adicional sobre el artículo aquí.</p>
@@ -169,7 +169,7 @@
       </div>
 
       <!-- Octavo artículo -->
-      <div class="col-xs-6 col-sm-6 col-md-3 article">
+      <div class="col-xs-8 col-sm-6 col-md-3 article">
         <img src="capuchones.jpg" alt="Imagen 8">
         <h3>Caños2</h3>
         <p>Descripción del Artículo 8. Puedes agregar información adicional sobre el artículo aquí.</p>
