Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light mx-auto" style="font-family: 'Permanent Marker', cursive;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="font-size: 24px;"><span style="color: rgb(0, 81, 255);">Zin</span>gueria Melli</a>
+        <a class="navbar-brand" href="#" style="font-size: 24px;"><span style="color: rgb(0, 183, 255);">Zin</span>gueria Melli</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -104,9 +104,9 @@
     <section id="quienes-somos">
       <div class="row">
         <div class="col-lg-6">
-          <h2 class="mb-4">Nosotros</h2>
+          <h2 class="mb-4 " style="color: rgb(0, 183, 255);font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;font-size: 35px;">Nosotros</h2>
           <p class="lead">Somos una empresa dedicada a...</p>
-          <p style="font-size: 16px;">
+          <p style="font-size: 15px;font-family: Georgia, 'Times New Roman', Times, serif;">
             Somos una empresa familiar dedicada al sector de la construcción, especializándonos en zinguería y techos.
             Nos destacamos por la instalación de techos nuevos, ya sea con tejas o chapas, así como por la fabricación
             a medida de estructuras en herrería para techos. En el ámbito de la zinguería, nos especializamos en la
@@ -128,7 +128,7 @@
   </div>
 
 
-  <h2 style="text-align: center;color: rgb(0, 183, 255);margin-top: 2rem;">Zinguería a medida</h2>
+  <h2 style="text-align: center;color: rgb(0, 183, 255);margin-top: 2rem;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">  Zinguería a medida</h2>
 
   <div class="row row-cols-1 row-cols-md-3 g-4" style="justify-content: center; max-width: 90%; margin: 0 auto;">
    
@@ -199,7 +199,7 @@
 
   <section class="photo-section">
     <div class="container">
-      <h2 class="text-center mb-4 " style="color: rgb(0, 153, 255);">Galeria</h2>
+      <h2 class="text-center mb-4 " style="color: rgb(0, 153, 255);font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">  Galeria</h2>
       <div class="row">
         <div class="col-md-4 photo-column">
           <img src="1.jpg" class="d-block w-100" alt="Foto 1">
@@ -254,7 +254,7 @@
       <!-- Sección del formulario -->
       <div class="col-md-6">
         <div id="form-container">
-          <h2>Contacto</h2>
+          <h2 style="color: rgb(0, 183, 255);font-family: 'Permanent Marker', cursive;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Contacto</h2>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
